# run-command-on-git-revisions

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  flake.nix  go.mod  main.go  pyproject.toml  run_command_on_git_revisions.py  shell.nix
src/: main.rs
