[package]
name = "run-command-on-git-revisions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
eyre = "0.6.5"
git2 = "0.13.24"
structopt = "0.3.25"
tracing = "0.1.29"
tracing-subscriber = "0.3.2"
